--- a/styleLogin.css
+++ b/styleLogin.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background: linear-gradient(to right, #f12711, #f5af19);
+    background: linear-gradient(to right,#84ffc9,#aab2ff, #40c9ff, #eca0ff);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -69,7 +69,7 @@ i{
 
 .inputclass{
     font-size: 1.2em;
-    height: 50px;
+    height: 45px;
     border-radius: 10px;
     outline: none;
 }
@@ -83,7 +83,7 @@ i{
 
 }
 
-.submitbutton{
+.loginbutton{
     border-radius: 10px;
     background: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
     width:200px;
@@ -92,7 +92,14 @@ i{
     color:white;
 }
 
-.loginbutton{
+.loginbutton:hover{
+    background: linear-gradient(to right top, #a8eb12, #00bf72, #008793, #004d7a, #051937);
+    cursor: pointer;
+}
+
+
+
+.signupbutton{
     border-radius: 10px;
     height: 30px;
     width:150px;
@@ -100,4 +107,9 @@ i{
     color:white;
     background: linear-gradient(to right top, #878789, #4b5357, #0f1314, #3b5f4d);
 
+}
+
+.signupbutton:hover{
+    background: linear-gradient(to right top, #3b5f4d, #0f1314, #4b5357, #878789);
+    cursor: pointer;
 }
