--- a/styleSignup.css
+++ b/styleSignup.css
@@ -10,15 +10,15 @@ body{
     justify-content: center;
     align-items: center;
     font-family: "Poppins", sans-serif;
+    min-height: 100vh;
 
 }
 
 #main{
     width:90%;
     max-width: 500px;
-    height: 80vh;
     min-height: 500px;
-    margin-top: 10vh;
+    max-height: 700px;
     background-color: aliceblue;
     border-radius: 10px;
     display: flex;
@@ -79,6 +79,7 @@ i{
     flex-direction: column;
     align-items: center;
     margin-top:5%;
+    margin-bottom:10%;
 
 }
 
