--- a/styleDashboard.css
+++ b/styleDashboard.css
@@ -41,15 +41,13 @@ body{
     margin-top: 5%;
 }
 
-.searchbar{
-    width: 0px;
+#searchbar{
+    width: 100%;
+    min-width: 200px;
     height: 30px;
-    border-radius: 30px;
-    padding:4px;
-    font-size: 1.2rem;
+    border-radius: 10px;
     border: none;
     outline: none;
-    transition: width 0.25 smooth;
 }
 
 #profilepic{
@@ -67,13 +65,21 @@ body{
     margin-left: 10px;
 }
 
+#searchbox{
+    display:flex;
+    align-items: center;
+    background-color: white;
+    border-radius: 10px;
+    padding:2px;
+    font-size: 1.2rem;
+}
 
 #menucontainer{
     background-color: white;
     width: 80%;
     height: 90%;
     margin-bottom: 2%;
-    overflow:hidden;
+    overflow-y: scroll;
 }
 
 .entry{
@@ -110,35 +116,78 @@ body{
     min-height: 30px;
     cursor: pointer;
 }
-
-.searchbutton, .closebutton{
-    width : 30px;
-    height: 30px;
-    font-size: 15px;
-    background-color: white;
+.sub-menu-drop_down{
     position: absolute;
-    cursor: pointer;
-    transition: all 0.25 ease;
-    background-color: transparent;
+    top: 28%;
+    right: 10%;
+    width: 320px;
+    font-style:initial;
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.5s;
 }
 
-.closebutton{
-    margin-left: 5px;
-    color:rgb(75, 75, 163);
-    z-index: -1;
-    background-color: transparent;
+.sub-menu-drop_down.open-menu{
+    max-height: 400px;
+}
+.sub-menu{
+    background: rgb(195, 142, 205);
+    padding: 20px;
+    margin: 10px;
+    border-radius: 1.2rem;
 }
 
-.active .searchbar{
-    width: 250px;
+.userinfo{
+    display: flex;
+    align-items: center;
 }
 
-.active .searchbutton{
-    transform: translate(180px,2px) scale();
-    background-color: transparent;
+.userinfo h2{
+    font-weight: 500;
+    color: white;
+    font-weight: bold;
 }
 
-.active .closebutton{
-    z-index: 0;
-    transform: translate(35px,-2px);
+.userinfo img{
+    width: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.sub-menu hr{
+    border: 0;
+    height: 1px;
+    width: 100%;
+    background-color: #ccc;
+    margin: 1px 0 10px;
+}
+
+.sub-menu-link{
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: azure;
+    margin-top: 5px;
+}
+
+::-webkit-scrollbar{
+    width: 8px;
+}
+::-webkit-scrollbar-track{
+    background: #d1e5ff;
+    
+    
+}
+::-webkit-scrollbar-thumb{
+    background:linear-gradient(#642bff,#ff22e6);
+    border-radius: 10px;
+}
+
+.sub-menu-link p{
+    width: 100%;
+}
+
+.sub-menu-link:hover p{
+    transform: translate(5px);
+    background-color: rgb(136, 132, 225);
 }
