--- a/styleForm.css
+++ b/styleForm.css
@@ -78,3 +78,21 @@ body{
     display:none;
 }
 
+::-webkit-scrollbar{
+    width: 8px;
+}
+::-webkit-scrollbar-track{
+    background: #d1e5ff;
+    
+    
+}
+::-webkit-scrollbar-thumb{
+    background:linear-gradient(#642bff,#ff22e6);
+    border-radius: 10px;
+}
+h1{
+    font-size: 24px;
+    color: #007bff; /* Blue color */
+    text-transform: uppercase;
+    font-weight: bold;
+}
