--- a/styleForm.css
+++ b/styleForm.css
@@ -22,15 +22,16 @@ body{
     border-radius: 10px;
     max-height: 90vh;
     overflow-y: scroll;
+    /* padding-bottom: 30px; */
 }
 
 #main h1{
     margin-top: 5%;
     margin-bottom: 5%;
     color: #0a0403;
-    font-size: 3rem;
+    font-size: 2rem;
+    font-family: "Poppins-Bold", sans-serif;
     font-weight: 600;
-
 }
 
 .inputclass{
@@ -60,14 +61,15 @@ body{
     flex-wrap: wrap;
 }
 
-#checkbox{
+.checkbox{
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 30px;
+    text-align: center;
 }
 
-#checkbox input{
+.checkbox input{
     width: 20px;
     height: 20px;
     transform: translateY(-0.5px);
@@ -90,9 +92,22 @@ body{
     background:linear-gradient(#642bff,#ff22e6);
     border-radius: 10px;
 }
-h1{
-    font-size: 24px;
-    color: #007bff; /* Blue color */
-    text-transform: uppercase;
-    font-weight: bold;
+
+.submitbutton{
+    display: flex;
+    justify-content: center;
+}
+
+#submit{
+    width:150px;
+    height: 30px;
+    margin: 30px;
+    border-radius: 20px;
+    background-color: blue;
+    color: white;
+    font-size: 1.2rem;
+}
+
+#submit:disabled{
+    background-color: grey;
 }
