--- a/styleDashboard.css
+++ b/styleDashboard.css
@@ -51,19 +51,31 @@ body{
     outline: none;
 }
 
-#profilepic{
-    width: 30px;
-    height:30px;
-    border-radius: 50%;
-    background-color: white;
-    align-self: center;
-    cursor: pointer;
-}
 
 #profile{
     display: flex;
     align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border:2px solid white;
+    color:white;
     margin-left: 10px;
+    font-size: 1.5rem;
+    background-color: rgb(3, 34, 3);
+    width:40px;
+    height: 40px;
+    cursor: pointer;
+}
+
+#dropdown{
+    /* display: none; */
+    position: fixed;
+    width:300px;
+    height: 300px;
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+    z-index: 1;
 }
 
 #searchbox{
@@ -99,7 +111,6 @@ body{
     width: 100%;
     margin:20px 0;
 }
-
 
 
 #newfirbutton{
@@ -145,51 +156,6 @@ body{
     min-height: 30px;
     cursor: pointer;
 }
-.sub-menu-drop_down{
-    position: absolute;
-    top: 28%;
-    right: 10%;
-    width: 320px;
-    font-style:initial;
-    max-height: 0px;
-    overflow: hidden;
-    transition: max-height 0.5s;
-}
-
-.sub-menu-drop_down.open-menu{
-    max-height: 400px;
-}
-.sub-menu{
-    background: rgb(195, 142, 205);
-    padding: 20px;
-    margin: 10px;
-    border-radius: 1.2rem;
-}
-
-.userinfo{
-    display: flex;
-    align-items: center;
-}
-
-.userinfo h2{
-    font-weight: 500;
-    color: white;
-    font-weight: bold;
-}
-
-.userinfo img{
-    width: 50px;
-    border-radius: 50%;
-    margin-right: 10px;
-}
-
-.sub-menu hr{
-    border: 0;
-    height: 1px;
-    width: 100%;
-    background-color: #ccc;
-    margin: 1px 0 10px;
-}
 
 .sub-menu-link{
     display: flex;
@@ -210,13 +176,4 @@ body{
 ::-webkit-scrollbar-thumb{
     background:linear-gradient(#642bff,#ff22e6);
     border-radius: 10px;
-}
-
-.sub-menu-link p{
-    width: 100%;
-}
-
-.sub-menu-link:hover p{
-    transform: translate(5px);
-    background-color: rgb(136, 132, 225);
 }
