--- a/styleDashboard.css
+++ b/styleDashboard.css
@@ -67,15 +67,61 @@ body{
     cursor: pointer;
 }
 
+#profilelarge{
+    margin-top:10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border:2px solid white;
+    color:white;
+    margin-left: 10px;
+    font-size: 1.7rem;
+    background-color: rgb(3, 34, 3);
+    width:60px;
+    height: 60px;
+}
+
 #dropdown{
     /* display: none; */
     position: fixed;
     width:300px;
     height: 300px;
-    background-color: white;
+    background:linear-gradient(#654ea2,#353335);
     border-radius: 10px;
     padding: 10px;
     z-index: 1;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#dropdown>p{
+    margin-top:0;
+}
+
+#borderforname{
+    border-bottom: 1px solid rgb(255, 255, 255);
+    width:100%;
+    display:flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+#borderforname>h2{
+    margin-bottom: 5px;
+}
+
+#logoutbutton{
+    margin-top: 15px;
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    min-width:100px;
+    min-height: 30px;
+    cursor: pointer;
+
 }
 
 #searchbox{
