--- a/styleLogin.css
+++ b/styleLogin.css
@@ -38,25 +38,20 @@ i{
     transform: translateY(-1px);
 }
 
+
+
 .inputbox{
     display: flex;
     flex-direction: column;
     margin-top: 10%;
 }
-
-
-
 #inputwforgot{
     display:flex;
     flex-direction: column;
     align-items: right;
 }
 
-#inputwforgot a{
-   align-self: flex-end;
-   margin-right: 10px;
-   margin-top: 10px;
-}
+
 
 .inputwicon{
     display: inline;
@@ -73,6 +68,8 @@ i{
     outline: none;
 }
 
+
+
 #buttonholder{
     display: flex;
     flex-direction: column;
@@ -83,6 +80,7 @@ i{
 
 }
 
+/* Login Button */
 .loginbutton{
     border-radius: 10px;
     background: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
@@ -97,7 +95,7 @@ i{
     cursor: pointer;
 }
 
-
+/* SignUp button */
 
 .signupbutton{
     border-radius: 10px;
@@ -113,3 +111,10 @@ i{
     background: linear-gradient(to right top, #3b5f4d, #0f1314, #4b5357, #878789);
     cursor: pointer;
 }
+
+/* Only for password div */
+#inputwforgot a{
+    align-self: flex-end;
+    margin-right: 10px;
+    margin-top: 10px;
+ }
